Fix minor alignment issue

--- a/application/renderer/add-task.css
+++ b/application/renderer/add-task.css
@@ -27,7 +27,7 @@ body {
   }
   
   input[type="text"] {
-    width: 90%;
+    width: 100%;
     padding: 10px;
     margin: 10px 0;
     border: 1px solid #ccc;
